--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="web_test_project">
+  <meta name="apple-mobile-web-app-title" content="greens_and_bunkers">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>web_test_project</title>
+  <title>greens_and_bunkers</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -36,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1447925840');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=173009933');
       });
     }
   </script>
